--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,34 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# From .NET Core 3.0 you can use the command: `dotnet new gitignore` to generate a customizable .gitignore file
 
-# Test binary, built with `go test -c`
-*.test
+*.swp
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Visual Studio Code
+.vscode
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 
-#Extra Stuff
-*.log
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+msbuild.log
+msbuild.err
+msbuild.wrn
+
+# Visual Studio 2015
+.vs/
