DALs, controllers, and tables

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "cs": "Data Source=characters.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
