--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "MSNexus": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "MSNexus",
+      "launchUrl": "api",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
