--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "cs": "Data Source=characters.db"
+  "SQLite": {
+    "ConnectionString": "Data Source=characters.db"
   },
   "Logging": {
     "LogLevel": {
