logic to use IpWhitelist middleware

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -2,6 +2,10 @@
   "SQLite": {
     "ConnectionString": "Data Source=characters.db"
   },
+  "IPWhitelist": {
+    "EnableMiddleware": true,
+    "File": "./whitelist.json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
