middleware logic for api auth

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -2,9 +2,12 @@
   "SQLite": {
     "ConnectionString": "Data Source=characters.db"
   },
-  "IPWhitelist": {
-    "EnableMiddleware": true,
-    "File": "./whitelist.json"
+  "APIAuth": {
+    "UseIP": true,
+    "UseKey": true,
+    "Enabled": true,
+    "IPList": "./whitelist.json",
+    "Key": "al6k0ymQdK"
   },
   "Logging": {
     "LogLevel": {
