disable middleware stuff by default

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -3,8 +3,8 @@
     "ConnectionString": "Data Source=characters.db"
   },
   "APIAuth": {
-    "UseIP": true,
-    "UseKey": true,
+    "UseIP": false,
+    "UseKey": false,
     "Enabled": true,
     "IPList": "./whitelist.json",
     "Key": "al6k0ymQdK"
