fix api key auth

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,7 +5,7 @@
   "APIAuth": {
     "UseIP": false,
     "UseKey": false,
-    "Enabled": true,
+    "Enabled": false,
     "IPList": "./whitelist.json",
     "Key": "al6k0ymQdK"
   },
