GET request to verify map hash

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -9,6 +9,10 @@
     "IPList": "./whitelist.json",
     "Key": "al6k0ymQdK"
   },
+  "Verify": {
+    "EnforceMap": false,
+    "MapList": "./maps.json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
