fix tar command hopefully

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,8 @@ jobs:
           echo ::set-output name=version_name::`sed -nr "s/^## (${REF:10} .*)$/\1/p" CHANGELOG.md`
       - name: tar release
         run: |
-          mkdir ./temp/
-          cd ./temp/
-          tar -zcvf ./temp/msnexus.tar.gz /home/runner/work/Playground/Playground/src/WebApp2/bin/Debug/netcoreapp3.1/publish/
+          mkdir ./temp
+          tar -cfz ./temp/msnexus.tar.gz /home/runner/work/Playground/Playground/src/WebApp2/bin/Debug/netcoreapp3.1/publish/*
       - name: create release
         id: create_release
         uses: actions/create-release@v1
