--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,6 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       - name: test
         run: dotnet test --no-restore --verbosity normal
-      - name: publish
-        run: dotnet publish
       - name: extract changelog
         env:
           REF: ${{ github.ref }}
@@ -31,7 +29,7 @@ jobs:
       - name: tar release
         run: |
           mkdir ~/temp
-          tar -czvf ~/temp/msnexus.tar.gz ~/runner/work/Playground/Playground/MSNexus/bin/Debug/netcoreapp3.0/publish/*
+          tar -czvf ~/temp/msnexus.tar.gz ~/runner/work/Playground/Playground/MSNexus/bin/Release/netcoreapp3.0/*
       - name: create release
         id: create_release
         uses: actions/create-release@v1
