apparently doesn't support ~, why

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ~/msnexus.tar.gz
+          asset_path: /home/runner/msnexus.tar.gz
           asset_name: msnexus.tar.gz
           asset_content_type: application/octet-stream
