added basic steamid ban support, and fixed some stuff

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -10,8 +10,10 @@
     "Key": "al6k0ymQdK"
   },
   "Verify": {
-    "EnforceMap": false,
-    "MapList": "./maps.json"
+    "EnforceMap": true,
+    "EnforceBan:": true,
+    "MapList": "./maps.json",
+    "BanList": "./bans.json"
   },
   "Logging": {
     "LogLevel": {
