change string to uint for hash comparison, added sc hash check

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -13,7 +13,8 @@
     "EnforceMap": true,
     "EnforceBan:": true,
     "MapList": "./maps.json",
-    "BanList": "./bans.json"
+    "BanList": "./bans.json",
+    "SCHash": 154651354,
   },
   "Logging": {
     "LogLevel": {
