beautify releases attempt 1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,12 @@ jobs:
         run: dotnet restore
       - name: test
         run: dotnet test --no-restore --verbosity normal
+      - name: install netcorebeauty
+        run: dotnet tool install --global nulastudio.ncbeauty
       - name: publish
         run: dotnet publish --framework netcoreapp3.1 --runtime linux-x64 -c Release -o msnexus-linux-x64
+      - name: beautify
+        run: ncbeauty "hostfxr;hostpolicy;*.deps.json;*.runtimeconfig*.json" /publish libraries "dll1.dll;lib*;..."
       - name: extract changelog
         env:
           REF: ${{ github.ref }}
